add last order as sequence & loading

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^1.0.1",
-    "tailwindcss": "2.0.4"
+    "tailwindcss": "2.2.7",
+    "postcss": "8.3.6"
   },
   "devDependencies": {
     "@octokit/types": "^6.34.0",
