--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@fortawesome/fontawesome-free": "5.15.3",
     "axios": "^1.1.3",
     "exceljs": "^4.3.0",
-    "iron-session": "latest",
+    "iron-session": "6.3.1",
     "moment": "^2.29.4",
-    "next": "latest",
+    "next": "12.2.5",
+    "postcss": "8.3.6",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^1.0.1",
-    "tailwindcss": "2.2.7",
-    "postcss": "8.3.6"
+    "tailwindcss": "2.2.7"
   },
   "devDependencies": {
     "@octokit/types": "^6.34.0",
