done for gilasy

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "electron-serve": "^1.1.0",
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "exceljs": "^4.3.0",
+    "ramda": "^0.28.0",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
