--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,8 @@
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "paths": {
+    "react": [ "./node_modules/@types/react" ]
+  }
 }
