--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@fortawesome/fontawesome-free": "5.15.3",
     "axios": "^1.1.3",
     "exceljs": "^4.3.0",
-    "iron-session": "latest",
+    "iron-session": "6.3.1",
     "moment": "^2.29.4",
-    "next": "latest",
+    "next": "12.2.5",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
